# Depiction

./: AUTHORS  Makefile.am  README.md  configure  configure.ac
src/: AboutDialog.cc  AboutDialog.cc~  AboutDialog.h  AboutDialog.h~  Depiction.cc  Depiction.cc~  Depiction.h  Depiction.h~  DepictionAboutDialog.cc~  DepictionAboutDialog.h~  DepictionMenuBar.cc~  DepictionMenuBar.h~  Makefile.am  Makefile.am~  Makefile.in  MenuBar.cc  MenuBar.cc~  MenuBar.h  MenuBar.h~  depiction.ui  depiction.ui~  main.cc  main.cc~
